refactor: 项目功能优化
1. 重构应用、权限、菜单关系
2. 平台角色可以预设相关角色权限